load(
    "@platformio_rules//platformio:platformio.bzl",
    "platformio_project",
)

platformio_project(
    name = "blink",
    src = "src/main.cpp",
    board = "uno",
    # If you need to you can pass multiple string key-value pairs directly
    # to PlatformIO. All of these will appear under the environment section in
    # the generated platformio.ini file. That would be "[env:megaatmega2560]" in
    # this example. For the available options see:
    # http://docs.platformio.org/en/stable/projectconf.html
    environment_kwargs = {
    },
    framework = "arduino",
    platform = "atmelavr",
    deps = [
    ],
)
