# buildifier: disable=module-docstring
module(name = "arduino-servo")

# https://github.com/bazelbuild/bazel-skylib
bazel_dep(name = "bazel_skylib", version = "1.9.0")

# https://github.com/bazelbuild/rules_cc
bazel_dep(name = "rules_cc", version = "0.2.17")

# https://github.com/bazelbuild/platforms
bazel_dep(name = "platforms", version = "1.0.0")

# https://github.com/keith/buildifier-prebuilt
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "7fe1eab26d2b8eeb5e1c6a2f38bddb001e3f9696",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)
# bazel run @hedron_compile_commands//:refresh_all

# Look at this: https://github.com/tweag/rules_nixpkgs/blob/a425ed7865b769c5508507ac8b3817feebe3eed7/testing/core/MODULE.bazel#L50
# https://github.com/egen/disruptor/blob/aec36d22cf53bf8f941d84b82cf5e0f43b01c02b/projects/bzl7/MODULE.bazel#L5

# TODO(@waflores) 2025-06-03: Figure out how to register clang/gcc properly in the repo

# https://github.com/bazel-contrib/bazelrc-preset.bzl
bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2")

# TODO: we need to have a look at this stuff: https://bazel.build/external/migration
# https://bazel.build/external/faq
# https://github.com/bazelbuild/examples/tree/main/bzlmod

# https://github.com/mum4k/platformio_rules.git
bazel_dep(name = "platformio_rules")
# git_override(
#     module_name = "platformio_rules",
#     commit = "1d619d882fcc33ab14a16fd8e53ed62b72b87af5",
#     remote = "https://github.com/waflores/platformio_rules.git",
# )

local_path_override(
    module_name = "platformio_rules",
    path = r"C:\Users\Will\PycharmProjects\Bazel\platformio_rules",
)
